# trueconf-server

./: .editorconfig  .gitignore  .gitmodules  all.cppcheck  cppcheck-config-exclude.txt  cppcheck-suppress.txt  fbuild.bff  fbuild.linux.bff  gen_solution.ps1  projects.bff  projects_linux.ini
AppServer/: AppServer.bff  AppServer.cpp  AppServer.rc  VS_AppServices.cpp  VS_AppServices.h  resource.h  version.h
BaseServer/: BaseServer.bff  BaseServer.cpp  BaseServer.rc  VS_BaseServerServices.cpp  VS_BaseServerServices.h  resource.h  version.h
GetLicenseKey/: .editorconfig  GetLicenseKey.bff  KeyGen.cpp  KeyGen.h
LicenseLib/: LicenseLib.bff  VS_EncodeLicense.cpp  VS_License.cpp  VS_License.h  VS_LicenseSharer.cpp  VS_LicenseSharer.h  (+2 more)
common/commonlibs/SecureLib/: CMakeLists.txt  CRC32.cpp  CRC32.h  NTLMDataHeaders.h  NTLMFlags.h  NTLMMessages.h  NTLMRoutines.cpp  NTLMRoutines.h  NTLMv2Client.cpp  NTLMv2Client.h  OpenSSLTypesWrapDefs.h  OpenSSLTypesWrapImpl.h  SecureLib.bff  SecureTypes.h  VS_CertMixins.cpp  VS_CertMixins.h  VS_Certificate.cpp  VS_Certificate.h  VS_CertificateIssue.cpp  VS_CertificateIssue.h  VS_CryptoInit.cpp  VS_CryptoInit.h  VS_PublicKeyCrypt.cpp  VS_PublicKeyCrypt.h  VS_SSLConfigKeys.cpp  VS_SSLConfigKeys.h  VS_SecureConstants.cpp  VS_SecureConstants.h  VS_SecureHandshake.cpp  VS_SecureHandshake.h  VS_Sign.cpp  VS_Sign.h  VS_StreamCrypter.cpp  VS_StreamCrypter.h  VS_SymmetricCrypt.cpp  VS_SymmetricCrypt.h  VS_UtilsLib.cpp  VS_UtilsLib.h
common/commonlibs/SecureLib/OpenSSLCompat/: tc_asn1.h  tc_crypto.h  tc_dh.h  tc_evp.h  tc_hmac.h  tc_ssl.h  tc_x509.h
common/commonlibs/chatlib/: CMakeLists.txt  callbacks.h  chat_defs.h  chatlib.bff  messages_types.h  msg_content_types.h
common/commonlibs/chatlib/chain/: BucketsOfMessages.cpp  BucketsOfMessages.h  ChainContainer.cpp  ChainContainer.h  ChainOfMessages.cpp  ChainOfMessages.h  adjust_msg_order.cpp  adjust_msg_order.h
common/commonlibs/chatlib/chatinfo/: info_types.h
common/commonlibs/chatlib/docs/: chat-layers.rm  stas_comments.rm
common/commonlibs/chatlib/factory_asio/: CMakeLists.txt  SteadyTimerWrap.h  defs.h  make_layers_asio.cpp  make_layers_asio.h
common/commonlibs/chatlib/helpers/: AccountInfo.cpp  AccountInfo.h  ExternalComponentsInterface.h  ResolverInterface.h  vs_def.h
common/commonlibs/chatlib/interface/: GlobalConfigInterface.h  SyncChatInterface.h  TransportChannel.h
common/commonlibs/chatlib/layers/: AppLayer.h  AppLayerImpl.h  ChatLayerAbstract.cpp  ChatLayerAbstract.h  DeliveryLayer.h  DeliveryLayerImpl.h  IntegrityLayer.h  IntegrityLayerImpl.h  LayersTraits.h  MainStorageLayer.h  MainStorageLayerImpl.h  SyncContext.cpp  SyncContext.h  SystemChatLayer.h  SystemChatLayerImpl.h  TransportLayer.h  TransportLayerImpl.h
common/commonlibs/chatlib/log/: chatlog.h
common/commonlibs/chatlib/msg/: ChatMessage.cpp  ChatMessage.h  attr.cpp  attr.h  chat_messages_construct.cpp  chat_messages_construct.h  parse_message.cpp  parse_message.h  parse_msg_content.cpp  parse_msg_content.h
common/commonlibs/chatlib/notify/: ChatEventsFuncs.cpp  ChatEventsFuncs.h  GlobalChatEvents.h  notify_cb.h
common/commonlibs/chatlib/storage/: ChatStorage.cpp  ChatStorage.h  DBProcWrap.cpp  DBProcWrap.h  PostgreSQLProcDecl.h  SQLITEProcDecl.h  helpers.h  make_chat_storage.cpp  make_chat_storage.h
common/commonlibs/chatlib/utils/: chat_utils.cpp  chat_utils.h  msg_utils.cpp  msg_utils.h
common/commonlibs/mdnslib/: CMakeLists.txt  Former.cpp  Former.h  Header.cpp  Header.h  Parser.cpp  Parser.h  Query.cpp  Query.h  RRecord.cpp  RRecord.h  mdnslib.bff  parser_types.h  tools.cpp  tools.h
common/commonlibs/mdnslib/addons/: SRV.h  TXT.h
common/commonlibs/std-generic/: CMakeLists.txt  asio_fwd.h  attributes.h  clang_version.h  gcc_version.h  libstdcxx_version.h  sanitizers.h  std-generic.bff  undef_windows.h
common/commonlibs/std-generic/clib/: rangecd.c  rangecd.h  sha1.cpp  sha1.h  strcasecmp.h  vs_time.h  wcscasecmp.h
common/commonlibs/std-generic/compat/: algorithm.h  bit.h  chrono.h  condition_variable.cpp  condition_variable.h  deque.h  forward_list.h  functional.h  iomanip.cpp  iomanip.h  iterator.h  list.h  map.h  memory.h  set.h  span.h  tuple.h  type_traits.h  unordered_map.h  unordered_set.h  utility.h  vector.h
common/commonlibs/std-generic/compat/boost/: enable_shared_from_this.hpp
common/commonlibs/std-generic/cpplib/: ASIOThreadPool.cpp  ASIOThreadPool.h  AtomicCache.h  Box.h  IntConv.h  SharedBuffer.h  StrCompare.h  ThreadUtils.cpp  ThreadUtils.h  TimeUtils.cpp  TimeUtils.h  VS_ClockWrapper.h  VS_Container.cpp  VS_Container.h  VS_Container_io.h  VS_CppDBIncludes.h  VS_CppDBLibs.h  VS_RemoveTranscoderID.cpp  VS_RemoveTranscoderID.h  atomic_shared_ptr.h  deleters.h  hton.h  ignore.h  macro_utils.h  mem_operations.h  move_handler.h  ptr_arg.h  scope_exit.h  stdendian.h  string_view.h  synchronized.h  utf8.cpp  utf8.h
common/commonlibs/std-generic/debuglog/: VS_Debug.h
common/commonlibs/std-generic/sqlite/: .editorconfig  CppSQLite3.cpp  CppSQLite3.h
common/fbuild/: CMakeLists.txt  Project_Linux.vcxproj.template  bisect-helper.sh  build-item.ps1  config.bff  defaults.bff  gen_action_aliases.bff  gen_common_vcx_projects.bff  gen_custom_project_group.bff  gen_def_objlist.bff  gen_def_objlist_c.bff  gen_def_objunity.bff  gen_def_resource.bff  gen_def_unity.bff  gen_ide_project.bff  gen_project_aliases.bff  gen_project_group_aliases.bff  gen_solution.ps1  gen_target_aliases.bff  result_path.bff  update_config.bff
common/fbuild/config/: link_boost.bff  link_cares.bff  link_cppdb.bff  link_cppdb_postgres.bff  link_cppdb_sqlite.bff  link_curl.bff  link_googletest.bff  link_ipp.bff  link_libpq.bff  link_libtorrent.bff  link_live555.bff  link_openh264.bff  link_openldap.bff  link_openssl.bff  link_speex.bff  link_sqlite.bff  link_webrtc.bff  use_boost.bff  use_cares.bff  use_cppdb.bff  use_curl.bff  use_googletest.bff  use_ipp.bff  use_libpq.bff  use_libtorrent.bff  use_live555.bff  use_openh264.bff  use_openldap.bff  use_openssl.bff  use_speex.bff  use_sqlite.bff  use_webrtc.bff
(+3633 files in other folders)
